--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -35,6 +35,9 @@ on:
       atlas:
         required: false
         type: string
+      fckit:
+        required: false
+        type: string
       plume:
         required: false
         type: string
@@ -53,6 +56,7 @@ jobs:
       metkit: ${{ steps.setup.outputs.metkit }}
       fdb: ${{ steps.setup.outputs.fdb }}
       atlas: ${{ steps.setup.outputs.atlas }}
+      fckit: ${{ steps.setup.outputs.fckit }}
       plume: ${{ steps.setup.outputs.plume }}
       mir: ${{ steps.setup.outputs.mir }}
     steps:
@@ -84,6 +88,8 @@ jobs:
             ${{ inputs.fdb || 'ecmwf/fdb@develop' }}:
               path: .github/ci-hpc-config.yml
             ${{ inputs.atlas || 'ecmwf/atlas@develop' }}:
+              path: .github/ci-hpc-config.yml
+            ${{ inputs.fckit || 'ecmwf/fckit@develop' }}:
               path: .github/ci-hpc-config.yml
             ${{ inputs.plume || 'ecmwf/plume@develop' }}:
               path: .github/ci-hpc-config.yml
@@ -296,10 +302,30 @@ jobs:
           dependencies: |
             ${{ inputs.eckit }}
 
+  fckit:
+    name: fckit
+    needs: [setup, eckit]
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.fckit && (inputs.eckit || inputs.fckit) }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.fckit) }}
+    runs-on:
+      [self-hosted, linux, "${{ inputs.dev_runner && 'hpc-dev' || 'hpc' }}"]
+    steps:
+      - uses: ecmwf-actions/reusable-workflows/ci-hpc@v2
+        with:
+          github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
+          github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
+          troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
+          repository: ${{ inputs.fckit || 'ecmwf/fckit@develop' }}
+          build_config: .github/ci-hpc-config.yml
+          dependencies: |
+            ${{ inputs.eckit }}
+
   plume:
     name: plume
-    needs: [setup, eckit, atlas]
-    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.plume && (inputs.eckit || inputs.atlas || inputs.plume) }}
+    needs: [setup, eckit, fckit, atlas]
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.plume && (inputs.eckit || inputs.fckit || inputs.atlas || inputs.plume) }}
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.setup.outputs.plume) }}
@@ -315,6 +341,7 @@ jobs:
           build_config: .github/ci-hpc-config.yml
           dependencies: |
             ${{ inputs.eckit }}
+            ${{ inputs.fckit }}
             ${{ inputs.atlas }}
 
   mir:
