--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -47,6 +47,9 @@ on:
       mir:
         required: false
         type: string
+      skinnywms:
+        required: false
+        type: string
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -63,6 +66,7 @@ jobs:
       fckit: ${{ steps.setup.outputs.fckit }}
       plume: ${{ steps.setup.outputs.plume }}
       mir: ${{ steps.setup.outputs.mir }}
+      skinnywms: ${{ steps.setup.outputs.skinnywms }}
       dep_tree: ${{ steps.setup.outputs.build_package_hpc_dep_tree }}
     steps:
       - name: checkout reusable wfs repo
@@ -103,6 +107,9 @@ jobs:
               path: .github/ci-hpc-config.yml
             ${{ inputs.mir || 'ecmwf/mir@develop' }}:
               path: .github/ci-hpc-config.yml
+            ${{ inputs.skinnywms || 'ecmwf/skinnywms@develop' }}:
+              path: .github/ci-hpc-config.yml
+              python: true
           SKIP_MATRIX_JOBS: |
             gnu-10.3.0
             ${{ inputs.skip_matrix_jobs }}
@@ -420,3 +427,23 @@ jobs:
             ${{ inputs.eckit }}
             ${{ inputs.eccodes }}
             ${{ inputs.atlas }}
+
+  skinnywms:
+    name: skinnywms
+    needs: [setup]
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.skinnywms && inputs.skinnywms }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.skinnywms) }}
+    runs-on:
+      [self-hosted, linux, "${{ inputs.dev_runner && 'hpc-dev' || 'hpc' }}"]
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    steps:
+      - uses: ecmwf-actions/reusable-workflows/ci-hpc@v2
+        with:
+          github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
+          github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
+          troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
+          repository: ${{ inputs.skinnywms || 'ecmwf/skinnywms@develop' }}
+          build_config: .github/ci-hpc-config.yml
