--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -50,6 +50,9 @@ on:
       skinnywms:
         required: false
         type: string
+      ecflow:
+        required: false
+        type: string
 
 jobs:
   setup:
@@ -70,6 +73,7 @@ jobs:
       skinnywms: ${{ steps.setup.outputs.skinnywms }}
       trigger_repo: ${{ steps.setup.outputs.trigger_repo}}
       dep_tree: ${{ steps.setup.outputs.build_package_dep_tree }}
+      ecflow: ${{ steps.setup.outputs.ecflow }}
     steps:
       - name: checkout reusable wfs repo
         uses: actions/checkout@v3
@@ -112,6 +116,8 @@ jobs:
             ${{ inputs.skinnywms || 'ecmwf/skinnywms@develop' }}:
               path: .github/ci-config.yml
               python: true
+            ${{ inputs.ecflow || 'ecmwf/ecflow@develop' }}:
+              path: .github/ci-config.yml
           PYTHON_VERSIONS: |
             - "3.10"
           MATRIX: |
@@ -474,3 +480,22 @@ jobs:
         with:
           repository: ${{ inputs.skinnywms || 'ecmwf/skinnywms@develop' }}
           checkout: true
+
+  ecflow:
+    name: ecflow
+    needs: [setup]
+    if: ${{ inputs.ecflow && needs.setup.outputs.ecflow }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.ecflow) }}
+    runs-on: ${{ matrix.labels }}
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    steps:
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
+        with:
+          repository: ${{ inputs.ecflow || 'ecmwf/ecflow@develop' }}
+          codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload }}
+          build_package_inputs: |
+            repository: ${{ inputs.ecflow || 'ecmwf/ecflow@develop' }}
+          build_config: .github/ci-config.yml
