--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -484,7 +484,7 @@ jobs:
 
   pdbufr:
     name: pdbufr
-    needs: [setup]
+    needs: [setup, eccodes-python]
     if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.pdbufr && inputs.pdbufr }}
     strategy:
       fail-fast: false
@@ -493,8 +493,18 @@ jobs:
     env:
       DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
     steps:
+      - name: Build dependencies
+        id: build-deps
+        uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
+        with:
+          repository: ${{ inputs.pdbufr || 'ecmwf/pdbufr@master' }}
+          codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload }}
+          build_package_inputs: |
+            repository: ${{ inputs.pdbufr || 'ecmwf/pdbufr@master' }}
+          build_config: .github/ci-config.yml
+          build_dependencies: |
+            ${{ inputs.eccodes-python }}
+
       - uses: ecmwf-actions/reusable-workflows/ci-python@v2
         with:
-          repository: ${{ inputs.pdbufr || 'ecmwf/pdbufr@downstream-ci' }}
-          checkout: true
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
