--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -244,8 +244,8 @@ jobs:
 
   cfgrib:
     name: cfgrib
-    needs: [setup, eccodes-python]
-    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.cfgrib && (inputs.eccodes-python || inputs.cfgrib) }}
+    needs: [setup, eccodes, eccodes-python]
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.cfgrib && (inputs.eccodes-python || inputs.eccodes || inputs.cfgrib) }}
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.setup.outputs.cfgrib) }}
@@ -263,11 +263,12 @@ jobs:
             repository: ${{ inputs.cfgrib || 'ecmwf/cfgrib@master' }}
           build_config: .github/ci-config.yml
           build_dependencies: |
-            ${{ inputs.eccodes-python }}
+            ${{ inputs.eccodes }}
 
       - uses: ecmwf-actions/reusable-workflows/ci-python@v2
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
+          python_dependencies: ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}
 
   eckit:
     name: eckit
@@ -521,7 +522,7 @@ jobs:
         with:
           repository: ${{ inputs.skinnywms || 'ecmwf/skinnywms@develop' }}
           checkout: true
-       
+
   ecflow:
     name: ecflow
     needs: [setup]
@@ -567,4 +568,3 @@ jobs:
       - uses: ecmwf-actions/reusable-workflows/ci-python@v2
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
-  
